# eetpp

./: CMakeLists.txt  Doxyfile.in  README.md  libeetpp.pc.cmake
.github/workflows/: codeql-analysis.yml
src/: eet.cpp  eet.h  templates.h
